base/k8s/op-connect/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onepassword-connect
spec:
  selector:
    matchLabels:
      app: onepassword-connect
  template:
    metadata:
      labels:
        app: onepassword-connect
        version: "1.0.0"
    spec:
      volumes:
        - name: shared-data
          persistentVolumeClaim:
            claimName: op-connect-pvc
        - name: credentials
          secret:
            secretName: op-credentials
      containers:
        - name: connect-api
          image: 1password/connect-api:latest
          securityContext:
            allowPrivilegeEscalation: false
          resources:
            limits:
              memory: "256Mi"
              cpu: "0.4"
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /home/opuser/.op/data
              name: shared-data
            - mountPath: /home/opuser/.config
              name: credentials
              readOnly: true
        - name: connect-sync
          image: 1password/connect-sync:latest
          securityContext:
            allowPrivilegeEscalation: false
          resources:
            limits:
              memory: "256Mi"
              cpu: "0.4"
          ports:
            - containerPort: 8081
          volumeMounts:
            - mountPath: /home/opuser/.op/data
              name: shared-data
            - mountPath: /home/opuser/.config
              name: credentials
              readOnly: true
